--- a/src/main/resources/templates/order-info-cashier.html
+++ b/src/main/resources/templates/order-info-cashier.html
@@ -33,7 +33,7 @@
                 <th scope="col">Type</th>
                 <th scope="col">Service/Product Name</th>
                 <th scope="col">Service/Product Price</th>
-                <th scope="col">Quantity</th>
+                <th scope="col">Quantity</th>d
                 <th scope="col">Price include</th>
             </tr>
             </thead>
